# monte-carlo-stock-forecast

./: .gitignore  CMakeLists.txt  README.md  download_data.py
include/: gbm_engine.h  json_exporter.h  server.h  statistics.h  stock_data.h
src/: gbm_engine.cpp  json_exporter.cpp  main.cpp  server.cpp  statistics.cpp  stock_data.cpp
tests/: CMakeLists.txt  test_gbm.cpp  test_statistics.cpp
web/: app.js  index.html  style.css
